updated index pages and sample works

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,20 @@ body::-webkit-scrollbar-track {
     /* border-radius: 0px 0px 50px 0px ; */
 }
 
+.sample-work-container {
+    max-width: fit-content;
+    /* Set your desired maximum width */
+    margin: 0 auto;
+    /* Center the container horizontally */
+    padding-bottom: 50px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 4.5px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(0, auto);
+}
+
 .boxed-margin {
     border-top: #FF7700 2px;
 }
@@ -357,6 +371,29 @@ body::-webkit-scrollbar-track {
 }
 
 .grid-item img {
+    max-width: 300px;
+    max-height: 300px;
+    transition: transform 0.5s;
+}
+
+.sample-grid-item {
+    background-color: rgba(0, 0, 0, 0.93);
+    color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    overflow: hidden;
+    position: relative;
+    opacity: 0;
+    transform: translateX(0);
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+.sample-grid-item img {
+    transform: scale(1.2);
+    /* Scale the element by 10% on hover */
+}
+
+.sample-grid-item img {
     max-width: 300px;
     max-height: 300px;
     transition: transform 0.5s;
